# another-day

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  formatting.yml
src/: .clang-format  App.cpp  App.hpp  CustomProgressBar.cpp  CustomProgressBar.hpp  Database.cpp  Database.hpp  Duration.cpp  Duration.hpp  DurationValidator.cpp  DurationValidator.hpp  EditProgressWindow.cpp  EditProgressWindow.hpp  MainWindow.cpp  MainWindow.hpp  Paths.cpp  Paths.hpp  Settings.cpp  Settings.hpp  SettingsWindow.cpp  SettingsWindow.hpp  WorkLog.cpp  WorkLog.hpp  WorkdayProgress.cpp  WorkdayProgress.hpp  main.cpp  pch.hpp
